# pixelbench

./: .gitignore  LICENSE  README.md  netlify.toml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
pixelbench/: __init__.py  cli.py  cuda_tasks.py  report.py  runner.py  sysinfo.py  tasks.py
results/: sample-i5-12450H.json
tests/: conftest.py  test_cli.py  test_report.py  test_runner.py  test_tasks.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css  vite-env.d.ts
web/src/bench/: cpu.test.ts  cpu.ts  gpu.ts  image.ts  runner.ts
web/src/components/: EnvCard.tsx  Layout.tsx  ResultsTable.tsx
web/src/pages/: About.tsx  Benchmark.tsx  Methodology.tsx
