[project]
name = "pixelbench"
version = "0.2.0"
description = "Speedtest for your CPU vs GPU — find out if GPU acceleration is actually worth it on your machine."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Okeah David Chidugam" }]
keywords = ["benchmark", "opencv", "gpu", "opencl", "image-processing"]
dependencies = [
    "opencv-python>=4.8",
    "numpy>=1.24",
    "rich>=13.0",
]

[project.optional-dependencies]
charts = ["matplotlib>=3.7"]

[project.scripts]
pixelbench = "pixelbench.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=7.1.0",
]

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pixelbench"]

[tool.uv]
package = true
