[project]
name = "pixelbench"
dynamic = ["version"]
description = "Speedtest for your CPU vs GPU — find out if GPU acceleration is actually worth it on your machine."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Okeah David Chidugam" }]
keywords = ["benchmark", "opencv", "gpu", "opencl", "image-processing"]
dependencies = [
    "opencv-python>=4.8",
    "numpy>=1.24",
    "rich>=13.0",
]

[project.optional-dependencies]
charts = ["matplotlib>=3.7"]

[project.scripts]
pixelbench = "pixelbench.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=7.1.0",
]

[build-system]
requires = ["setuptools>=77", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pixelbench"]

# Version comes from the git tag (v0.2.1 -> 0.2.1). Between releases,
# builds get dev versions like 0.2.2.dev3+g1a2b3c.
[tool.setuptools_scm]
fallback_version = "0.0.0"

[tool.uv]
package = true
